--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  // "scripts": {
+  //   "start": "node server.js",
+  //   "test": "echo \"Error: no test specified\" && exit 1",
+  //   "server": "nodemon server",
+  //   "client": "npm start --prefix client",
+  //   "dev": "concurrently \"npm run server\" \"npm run client\""
+  // },
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "cd client && npm run build",
+    "install": "cd client && npm install",
+    "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
