--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/JayLewis1/Portfolio.git"
+    "url": "https://github.com/JayLewis1/Portfolio"
   },
   "author": "",
   "license": "ISC",
